<!-- 
 * Class Assignment 2A
 * MainActivity.java
 * Students { Michael Hofmeister, Azim Javedali Saiyed, Timothy Shay }
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/text_hint1"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/text_hint2"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_add" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_subtract" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_multiply" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_divide" />

    <Button
        android:id="@+id/clearAllButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_clearall" />

</LinearLayout>
